<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="close">Close</string>
    <string name="remove">Remove</string>
    <string name="reset">Reset</string>
    <string name="clear_creds">Clear</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning</string>
    <string name="will_submit_stuff">Will submit listening information to this website</string>
    <string name="also_disable_np_title">Also disable now-playing</string>
    <string name="also_disable_np_summary">[Hmpf]</string>
    <string name="menu_exit">Exit</string>
    <string name="by">by</string>
    <string name="issues">Issues: %s</string>
    <string name="website">Website: %s</string>
    <string name="troubShoot">Trouble Shoot: %s</string>
    <string name="by_adam">by Adam Renberg</string>
    <string name="license">Released under Apache License v2.0</string>
    <string name="about_text">A lightweight scrobbler that submits information to Last.fm (and/or Libre.fm) on what music you play on your android phone. Last.fm then lets you view listening statistics and recommends new music you might like.</string>
    <string name="everything_disabled">Scrobbling/now playing is disabled.</string>
    <string name="file_error">File error!</string>
    <string name="thats_new">That which is new</string>
    <string name="about">About</string>
    <string name="whats_new">What\'s new</string>
    <string name="supported_netapps">Supported websites: %1</string>
    <string name="supported_apps">Supported apps: %s and more…</string>
    <string name="scrobbles_cache_nonum">Scrobbles in local cache:</string>
    <string name="scrobbles_cache">Scrobbles in local cache: %1</string>
    <string name="db_error">Database error</string>
    <string name="scrobble_now">Scrobble now</string>
    <string name="reset_stats">Reset statistics</string>
    <string name="scrobble_cache_title">Scrobble cache</string>
    <string name="confirm_delete_sc">Are you sure you don\'t want to scrobble this track to %1? This operation cannot be undone.</string>
    <string name="confirm_delete_sc_from_all">Are you sure you don\'t want to scrobble this track? This operation cannot be undone.</string>
    <string name="confirm_delete_all_sc">Are you sure you want to clear all tracks in the cache for %1? This operation cannot be undone.</string>
    <string name="confirm_delete_all_sc_from_all">Are you sure you want to clear all tracks in the cache? This operation cannot be undone.</string>
    <string name="confirm_delete_all_scd_tr">Are you sure you want to clear all scrobbled tracks in the cache for %1? This operation cannot be undone.</string>
    <string name="confirm_delete_all_scd_tr_from_all">Are you sure you want to clear all scrobbled tracks in the cache? This operation cannot be undone.</string>
    <string name="no_scrobbles_in_cache">There are no cached scrobbles</string>
    <string name="view_sc">View scrobble cache</string>
    <string name="view_sc_details">View details</string>
    <string name="delete_sc">Remove from cache</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_completed_cache">Clear completed cache</string>
    <string name="track_info">Track info</string>
    <string name="view_sc_title_for">Scrobble cache for %1</string>
    <string name="view_sc_for_all_summary">View and edit the list of unsubmitted scrobbles</string>
    <string name="all_websites">all websites</string>
    <string name="sc_sorted_by">Ordered by: %1</string>
    <string name="sc_sort_title">Sort order</string>
    <string name="sc_sortorder_change">Change sort order</string>
    <string name="sc_sort_when_asc">Time played, ascending</string>
    <string name="sc_sort_when_desc">Time played, descending</string>
    <string name="sc_sort_artist_asc">Artist, ascending</string>
    <string name="sc_sort_artist_desc">Artist, descending</string>
    <string name="sc_sort_album_asc">Album, ascending</string>
    <string name="sc_sort_album_desc">Album, descending</string>
    <string name="sc_sort_track_asc">Track name, ascending</string>
    <string name="sc_sort_track_desc">Track name, descending</string>
    <string name="user_credentials_title">User credentials</string>
    <string name="user_credentials_summary">Set username and password for your %1 account</string>
    <string name="user_credentials_summary_no_napp">Set username and password for your account(s)</string>
    <string name="user_credentials_enter_ok">Authenticate</string>
    <string name="user_credentials_enter_cancel">Cancel</string>
    <string name="user_credentials_clear_title">Clear credentials</string>
    <string name="user_credentials_clear_summary">Clears username and session key</string>
    <string name="supported_netapps_category_title">Supported websites</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="auth_client_banned">This version of the app is deprecated, please upgrade</string>
    <string name="auth_bad_auth">Wrong username/password/token</string>
    <string name="auth_server_error">Server error: %1, retrying…</string>
    <string name="auth_timing_error">Client side timing error, retrying…</string>
    <string name="auth_network_error_retrying">Network error, retrying…</string>
    <string name="auth_rate_limit_exceeded">Rate limit exceeded</string>
    <string name="auth_network_unfit">Not allowed to submit data on network, change in Options screen</string>
    <string name="auth_updating">Authenticating…</string>
    <string name="auth_internal_error">Internal error</string>
    <string name="auth_just_error">Error, retrying…</string>
    <string name="logged_in_just">Logged in as:</string>
    <string name="logged_in_as">Logged in as: %1</string>
    <string name="log_in_to">Sign in to</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="create_user_title">Sign up</string>
    <string name="create_user_summary">Sign up for an account at %1</string>
    <string name="confirm_clear_creds">Are you sure you want to clear your user credentials for %1? This will also remove any unsubmitted scrobbles.</string>
    <string name="confirm_clear_all_creds">Are you sure you want to clear your user credentials for all logged in accounts? This will also remove any unsubmitted scrobbles.</string>
    <string name="heart_and_copy">Song Options</string>
    <string name="heart_title">Love</string>
    <string name="heart_current_track">Love Current Track at Last.fm (Libre.fm)</string>
    <string name="no_heart_track">Heart Track Failed</string>
    <string name="loved_track">Loved Track</string>
    <string name="no_lastFm">Please enter your last.fm credentials</string>
    <string name="song_is_ready">Song Ready</string>
    <string name="copy_title">Copy</string>
    <string name="copy_current_track">Copy Current Track to Clip Board</string>
    <string name="no_copy_track">Copy Track Failed</string>
    <string name="no_current_track">No Current Song Available</string>
    <string name="theme_title">Theme Selection</string>
    <string name="theme_summary">Select a Theme</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="theme_default">Default</string>
    <string name="permission_required">Permission REQUIRED to work properly</string>
    <string name="creds_required">Credentials REQUIRED to work properly</string>
    <string name="notification_access_required">Notification access REQUIRED to work properly</string>
    <string name="notification_access_recommended">Notification access is strongly recommended to make scrobble work.</string>
    <string name="limited_network">Limited Network</string>
    <string name="incompatability_short">Warning: %1$s is installed and may cause double scrobbling.</string>
    <string name="incompatability_long">Warning: %1$s is installed and may cause incompatibilities with scrobbling. Disable scrobbling from this app, or uninstall %1$s.</string>
    <string name="show_supported_apps_list_summary">Enable/disable scrobbling from apps</string>
    <string name="supported_apps_category_title">Enabled apps</string>
    <string name="app_disabled">Won\'t scrobble music from this app</string>
    <string name="not_installed">This app is not installed</string>
    <string name="no_supported_mapis_title">No music apps detected</string>
    <string name="find_supported_mapis_one_title">1 music app detected</string>
    <string name="find_supported_mapis_many_title">%1 music apps detected</string>
    <string name="find_supported_mapis_summary">Play music in a supported app and it will appear here</string>
    <string name="unknown_mapi">Unknown app (pre SLS v1.2.3)</string>
    <string name="notification_controller">Notification Default</string>
    <string name="new_music_app">New Music App Detected, Click Here</string>
    <string name="clear_apps">Clear Apps</string>
    <string name="active_app">Active App Notification</string>
    <string name="active_app_summary">WARNING, may skip scrobbles.</string>
    <string name="options_title">Options</string>
    <string name="advanced_options_title">Advanced options</string>
    <string name="scrobbling">Scrobble</string>
    <string name="scrobbling_enable">Submit listening information when you\'ve listened to a song</string>
    <string name="nowplaying">Notify now playing</string>
    <string name="nowplaying_enable">Broadcast what song you currently are listening to</string>
    <string name="scrobble_point_title">Scrobble point</string>
    <string name="scrobble_point_summary">Will cache scrobble after %1% of it has been played</string>
    <string name="ao_battery_title">On battery</string>
    <string name="ao_plugged_title">Plugged in</string>
    <string name="options_summary">Including battery conserving settings</string>
    <string name="advanced_options_notify_title">Phone Notifications</string>
    <string name="advanced_options_custom_category_title">Custom scrobbling options</string>
    <string name="advanced_options_when_title">When to scrobble</string>
    <string name="advanced_options_also_on_complete_title">Also on playlist finish</string>
    <string name="advanced_options_also_on_complete_summary">Also scrobble when you\'ve finished listening to a playlist</string>
    <string name="advanced_options_also_on_plugged_title">Also when plugged in</string>
    <string name="advanced_options_type_custom_name">Custom</string>
    <string name="notification_priority">Notification Priority</string>
    <string name="languages_title">Languages (* are incomplete)</string>
    <string name="scrobble_status_title">Scrobble status</string>
    <string name="other_category_title">Other</string>
    <string name="status_show_title">Status</string>
    <string name="status_show_summary">Show statistics and overall status</string>
    <string name="developer_options">Developer Options</string>
    <string name="export_database">Export Database</string>
    <string name="permission_activate">Activate</string>
    <string name="permissions_title">Permissions</string>
    <string name="permission_external_storage">External Storage</string>
    <string name="permission_notification_listener">Notification Listener</string>
    <string name="permission_battery_optimizations">Battery Optimizations</string>
    <string name="permission_continue">Continue</string>
    <string name="permission_skip">Skip</string>
    <string name="old_track">Track Title</string>
    <string name="new_track">New Track Title</string>
    <string name="old_artist">Artist Title</string>
    <string name="new_artist">New Artist Title</string>
    <string name="old_album">Album Title</string>
    <string name="new_album">New Album Title</string>
</resources>