<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:key="user_creds_header" />
    <com.adam.aslfms.EditUserCredentials
        android:dialogTitle="@string/user_credentials_title"
        android:key="edit_user_credentials"
        android:negativeButtonText="@string/user_credentials_enter_cancel"
        android:positiveButtonText="@string/user_credentials_enter_ok"
        android:title="@string/user_credentials_title" />
    <Preference
        android:key="clear_user_credentials"
        android:summary="@string/user_credentials_clear_summary"
        android:title="@string/user_credentials_clear_title" />
    <PreferenceCategory android:title="@string/other_category_title" />
    <Preference
        android:key="create_user"
        android:title="@string/create_user_title" />
</PreferenceScreen>