<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
        <EditText
            android:id="@+id/edit_track_to_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_track" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
        <EditText
            android:id="@+id/edit_track_correction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_track" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
        <EditText
            android:id="@+id/edit_artist_to_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_artist" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
        <EditText
            android:id="@+id/edit_artist_correction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_artist" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
        <EditText
            android:id="@+id/edit_album_to_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_album" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
        <EditText
            android:id="@+id/edit_album_correction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_album" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>
