<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    android:orientation="vertical"
    tools:context=".PermissionsActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical" >

                <TextView
                    android:id="@+id/text_permisions_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4sp"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:text="@string/permissions_title"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/privacy_link_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_menu_help"
                    android:textSize="12sp"
                    android:background="@android:color/holo_blue_bright" />

            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="12sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical" >

                <TextView
                    android:id="@+id/text_permission_notification_listener"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4sp"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:text="@string/permission_notification_listener"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button_permission_notification_listener"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_activate"
                    android:textSize="12sp" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="12sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical" >

                <TextView
                    android:id="@+id/text_permission_battery_optimizations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4sp"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:text="@string/permission_battery_optimizations"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button_permission_battery_optimizations"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_activate"
                    android:textSize="12sp" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="12sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/text_permission_external_storage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4sp"
                    android:gravity="center_horizontal"
                    android:text="@string/permission_external_storage"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button_permission_external_storage"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_activate"
                    android:textSize="12sp" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="12sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical" >

                <Button
                    android:id="@+id/button_skip"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/permission_skip"
                    android:textSize="12sp" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="12sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical">

                <Button
                    android:id="@+id/button_continue"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/permission_continue"
                    android:textSize="12sp" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="12sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical" >

                <TextView
                    android:id="@+id/text_find_notification_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:textColor="@color/LastFm"
                    android:textSize="16sp" />

            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="12sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical" >

                <TextView
                    android:id="@+id/text_find_battery_optimization_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:textColor="@color/LastFm"
                    android:textSize="16sp" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>